# ssm-service-file-converter

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: code-checks.yaml  container-build.yaml  tags.yaml
dockerfiles/: development.Dockerfile  production.Dockerfile
src/ssm_file_converter/: __init__.py  app.py  config.py
src/ssm_file_converter/apis/: __init__.py
src/ssm_file_converter/apis/version1/: convert.py  merge.py  root.py
src/ssm_file_converter/services/: __init__.py  scidata_converter.py  scidata_merger.py  ssm_json_converter.py
src/ssm_file_converter/utils/: file_formats.py
tests/: __init__.py  conftest.py  test_ssm_file_converter.py
tests/apis/version1/: test_convert.py  test_merge.py  test_root.py
tests/data/jcamp/: raman_auc.jdx  raman_soddyite.jdx  raman_studtite.jdx
tests/data/rruff/: raman_auc.rruff  raman_soddyite.rruff  raman_studtite.rruff
tests/data/scidata-jsonld/: nmr_limonene.jsonld  person_john_lennon.jsonld  raman_auc.jsonld  raman_soddyite.jsonld  raman_studtite.jsonld
tests/data/ssm-json/: nmr_limonene.json  raman_auc.json  raman_soddyite.json  raman_studtite.json
tests/services/: test_scidata_merger.py
