[tool.poetry]
name = "ssm-file-converter"
version = "0.1.0"
description = ""
authors = ["Marshall McDonnell <mcdonnellmt@ornl.gov>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
flake8 = "^3.9.2"
autoflake = "^1.4"
requests = "^2.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
