[project]
name = "ssm-file-converter"
description = ""
authors = [
    {name = "Marshall McDonnell", email = "mcdonnellmt@ornl.gov"},
]
dependencies = [
    "fastapi<1.0.0,>=0.74.1",
    "uvicorn<1.0.0,>=0.15.0",
    "pydantic<2.0.0,>=1.9.0",
    "python-multipart<1.0.0,>=0.0.5",
    "scidatalib==0.2.6a1",
]
requires-python = ">=3.8,<4.0"
readme = "README.md"
dynamic = ["version"]
license = {text = "BSD 3-Clause"}

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = [
    "pytest<6.0,>=5.2",
    "mypy<1.0,>=0.910",
    "flake8<4.0.0,>=3.9.2",
    "autoflake<2.0,>=1.4",
    "requests<3.0.0,>=2.27.1",
    "coverage<7.0.0,>=6.3.2",
]

[tool.pdm.build]
package-dir = "src"
includes = []

[tool.pdm.version]
source = "file"
path = "src/ssm_file_converter/version.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"



